--- a/0-styles.css
+++ b/0-styles.css
@@ -127,6 +127,9 @@ table {
   border-spacing: 0;
 }
 /* ------------------------------- */
+* {
+  box-sizing: border-box;
+}
 html {
   font-size: 62.5%;
 }
@@ -141,6 +144,7 @@ a {
   --btn-hover_active-opacity: 0.9;
   --content-max-width: 1000px;
   --width-mobile: 480px;
+  --color-white: #fff;
 }
 /* 
     font-family: 'Source Sans Pro', sans-serif;
@@ -152,6 +156,7 @@ a {
 }
 .nav {
   max-width: 25.5rem;
+  flex: 2 0 100%;
 }
 .nav__main-nav {
   max-width: 25.5rem;
@@ -163,16 +168,24 @@ a {
 .hero-section {
   color: #fff;
 }
-.nav__main-nav a {
+.nav__main-nav a:link,
+.nav__main-nav a:visited {
   font-size: 1.2rem;
+  font-weight: 600;
+  transition: all 0.2s;
+}
+.nav__main-nav a:hover,
+.nav__main-nav a:active {
+  color: #ff6565;
 }
 .hero-section {
   background-image: url("images/headphones_hero_1.jpg");
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 90vh;
-  margin-top: -3.2rem;
+  height: 100vh;
+  margin-top: -5.9rem;
+  padding: 0 2rem;
 }
 .header {
   max-width: 1000px;
@@ -180,4 +193,148 @@ a {
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 2.5rem 2rem 0 2rem;
+}
+.hero__container {
+  padding-top: 37.2rem;
+  max-width: 63.7rem;
+  margin: 0 auto;
+  height: 31.3rem;
+  text-align: center;
+}
+.hero__description {
+  margin-top: 5rem;
+  text-align: center;
+  line-height: 1.5;
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+.hero__container h1 {
+  font-size: 3.2rem;
+  line-height: 1.2;
+}
+.hero__container h1 + p {
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+.btn-primary {
+  margin-top: 3rem;
+  padding: 1rem 2rem;
+  background-color: #ff6565;
+  box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.8);
+  border: none;
+  border-radius: 50px;
+  text-transform: uppercase;
+  color: inherit;
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 600;
+  transition: all 0.2s;
+}
+.btn-primary:hover,
+.btn-primary:active {
+  opacity: var(--btn-hover_active-opacity);
+}
+
+/* menu btn */
+.header .menu-btn {
+  display: none;
+}
+.header .menu-btn:checked ~ .nav {
+  display: block;
+  width: 100%;
+}
+.header .menu-btn:checked ~ .nav .nav__main-nav {
+  max-height: 100%;
+  overflow: inherit;
+}
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+.header .menu-btn:checked ~ .menu-icon .navicon::before {
+  transform: rotate(-45deg);
+}
+.header .menu-btn:checked ~ .menu-icon .navicon::after {
+  transform: rotate(45deg);
+}
+.header .menu-btn:checked ~ .menu-icon .navicon::before,
+.header .menu-btn:checked ~ .menu-icon .navicon::after {
+  top: 0;
+}
+.header .menu-icon {
+  display: none;
+}
+@media screen and (max-width: 480px) {
+  .header {
+    flex-wrap: wrap;
+    padding: 0 1.5rem;
+    align-items: center;
+    justify-content: center;
+    row-gap: 2rem;
+  }
+  .hero-section {
+    margin-top: -14.9rem;
+    background-position: left 35% bottom 45%;
+  }
+  .hero__container {
+    padding-top: 25rem;
+  }
+  .header .menu-icon {
+    display: block;
+  }
+  .nav__main-nav li {
+    text-align: center;
+    margin-left: 6rem;
+  }
+
+  .logo {
+    margin: 0 auto;
+  }
+
+  .navbar-menu {
+    display: none;
+    flex: 1;
+  }
+  .header .nav__main-nav {
+    flex-direction: column;
+    overflow: hidden;
+    max-height: 0;
+    transition: all 0.3s ease-out;
+  }
+  .header .menu-icon {
+    cursor: pointer;
+    padding: 2.5rem;
+    position: relative;
+    user-select: none;
+  }
+  .header .menu-icon .navicon {
+    background: var(--color-white);
+    display: block;
+    width: 1.5rem;
+    height: 0.2rem;
+    position: relative;
+    transition: background 0.2s ease-out;
+  }
+  .header .menu-icon .navicon::before,
+  .header .menu-icon .navicon::after {
+    content: "";
+    display: block;
+    width: 2rem;
+    height: 100%;
+    position: absolute;
+    background: var(--color-white);
+    transition: all 0.2s ease-out;
+  }
+  .header .menu-icon .navicon::before {
+    top: 0.7rem;
+  }
+  .header .menu-icon .navicon::after {
+    top: -0.7rem;
+  }
+  .btn-primary {
+    margin-top: 1.5rem;
+  }
+  .hero__description {
+    margin-top: 3rem;
+  }
 }
